--- a/style.css
+++ b/style.css
@@ -19,7 +19,10 @@ body {
 #entireWebpage {
     display: flex;
     justify-content: space-between;
+    width: 80%;
+    margin: 0 auto;
 }
+
 .logoRow {
     display: flex;
 }
@@ -61,7 +64,7 @@ h3 {
 .searchBar {
     border: none;
     width: 200px;
-    margin-top: 30px;
+    margin-top: 15px;
     margin-right: 30px;
     margin-bottom: 30px;
     height: 30px;
@@ -88,6 +91,19 @@ h3 {
     border-radius: 30px;
 }
 
+#left-column {
+    width: 20%;
+}
+
+#quackColumn {
+    width: 60%;
+    padding-top: 30px;
+}
+
+#rightColumn {
+    width: 20%;
+}
+
 .column {
     display: flex;
     flex-direction: column;
@@ -108,7 +124,7 @@ h4 {
     display: flex;
     margin-bottom: 10px;
     padding: 10px;
-    border-radius:10px;
+    border-radius: 10px;
 }
 
 .wtf-row:hover {
@@ -116,7 +132,7 @@ h4 {
 }
 
 .hashFont {
-    margin-top:40px;
+    margin-top: 40px;
     font-weight: bolder;
     font-size: 14pt;
 }
@@ -134,11 +150,10 @@ h4 {
 textarea {
     border: none;
     font-family: 'Lato', sans-serif;
-    width: 700px;
-    height: 50px;
+    height: 150px;
     border-radius: 30px;
     padding: 20px;
-    margin-top: 30px;
+    width: 100%;
 }
 
 .qButton {
@@ -149,7 +164,7 @@ textarea {
     border-radius: 10px;
     font-family: 'Lato', sans-serif;
     color: white;
-    letter-spacing:0.5pt;
+    letter-spacing: 0.5pt;
     font-size: 14pt;
     margin: 10px;
 }
@@ -167,10 +182,33 @@ textarea {
 
 .qAreaFormat {
     background-color: #fddc6e;
-    width: 700px;
+    width: 100%;
     border-radius: 10px;
-    padding: 20px;
+    padding: 30px;
+    box-sizing: border-box;
     margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.qAreaFormat p {
+    padding: 0;
+    margin: 0;
+}
+
+.quack-info {
+    width: 20%;
+    text-align: center;
+}
+
+.quack-content {
+    width: 70%;
+    position: relative;
+}
+
+.btn-section {
+    position: absolute;
+    bottom: 0;
 }
 
 .iconFormat {
@@ -211,4 +249,79 @@ textarea {
 
 .comment:hover {
     color: #6d237d;
+}
+
+.quack-input {
+    display: flex;
+}
+
+.quack-input .img-wrapper {
+    width: 130px;
+    height: 130px;
+    margin-right: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-wrapper img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 50%;
+}
+
+.text-area-section {
+    width: 70%;
+}
+
+#quackColumn .container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.img-wrapper {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quack-info span {
+    font-size: 15px;
+    font-weight: 800;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.haibao-requack {
+    background-color: white;
+}
+
+.requack-area {
+    position: relative;
+}
+
+#trending-section {
+    list-style: none;
+}
+
+#trending-section li a {
+    text-decoration: none;
+    font-weight: 800;
+    color: black;
+}
+
+.showLike {
+    position: absolute;
+    bottom: -39px;
+    /* border: 1px solid blue; */
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: #fec728;
+    color: black;
+    display: none;
+    list-style: none;
 }
