--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .blue {
-    color: blue;
+    color: #2d998b;
 }
 
 body {
@@ -60,7 +60,9 @@ h3 {
 
 .searchBar {
     border: none;
-    width: 200px;
+    width: 12vw;
+    min-width: 130px;
+    max-width: 200px;
     margin-top: 30px;
     margin-right: 30px;
     margin-bottom: 30px;
@@ -80,7 +82,9 @@ h3 {
     background-color: #fddc6e;
     margin-right: 30px;
     margin-bottom: 30px;
-    width: 200px;
+    width: 12vw;
+    min-width: 130px;
+    max-width: 200px;
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 30px;
@@ -134,7 +138,7 @@ h4 {
 textarea {
     border: none;
     font-family: 'Lato', sans-serif;
-    width: 700px;
+    width: 45vw;
     height: 50px;
     border-radius: 30px;
     padding: 20px;
@@ -167,7 +171,7 @@ textarea {
 
 .qAreaFormat {
     background-color: #fddc6e;
-    width: 700px;
+    width: 45vw;
     border-radius: 10px;
     padding: 20px;
     margin-top: 30px;
@@ -211,4 +215,76 @@ textarea {
 
 .comment:hover {
     color: #6d237d;
+}
+
+@media (max-width: 1187px) {
+    h3 {
+        font-size: 20pt;
+        position: relative;
+        top: 20px;
+    }
+    h2 {
+        font-size: 14pt;
+    }
+    #navbar {
+        width: 160px;
+        padding:10px;
+        position: relative;
+        top: 40px;
+    }
+    .icon {
+        position: relative;
+        top: 10px;
+    }
+}
+
+@media (max-width: 1012px) {
+    h2,h3 {
+        display: none;
+    }
+    #navbar {
+        width: 40px;
+        position: relative;
+        top: 50px;
+    }
+    .icon {
+        margin-bottom: 30px;
+        margin-left: 5px;
+    }
+}
+
+@media (max-width: 729px) {
+    .searchBar,#whoToFollow,#trending {
+        display: none;
+    }
+    .qAreaFormat, textarea {
+        width: 70vw;
+    }
+}
+
+@media (max-width: 610px) {
+    .qAreaFormat, textarea {
+        width: 55vw;
+    }
+}
+
+@media (max-width: 450px) {
+    .logo {
+        width: 60px;
+        height: 60px;
+    }
+    .qAreaFormat, textarea {
+        width: 50vw;
+    }
+}
+
+@media (max-width: 396px) {
+    .qButton {
+        width: 60px;
+        height: 30px;
+        font-size: 10pt;
+    }
+    #remain {
+        font-size: 10pt;
+    }
 }
