--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body {
     background-color: #fec728;
     font-family: 'Lato', sans-serif;
+    margin: 0;
 }
 #account
 {
@@ -415,6 +416,78 @@ details summary::-webkit-details-marker {
 {
     margin-top: 10px;
 }
+.change-account
+{
+    position: fixed;
+    width: 25%;
+    padding-bottom: 20px;
+    background-color: #fddc6e;
+    z-index: 2;
+    left: 50%;
+    top: 20%;
+    transform: translateX(-50%);
+    background: #fff;
+    border: 1px solid #ccc;
+    border-color: rgba(0,0,0,.2);
+    color: #000;
+    box-shadow: 0 2px 10px rgba(0,0,0,.2);
+    display: none;
+}
+.change-account .current-account
+{
+    text-align: center;
+}
+ #currentUserName
+{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+}
+.change-account .current-account 
+{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: 1px solid #ccc;
+    border-color: rgba(0,0,0,.2);
+}
+.change-account .another-account-list ul
+{
+    list-style: none;
+    padding: 0;
+}
+.change-account .img-wrapper1
+{
+    width: 20%;
+}
+.another-account-list li
+{
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    margin-bottom: 20px;
+}
+.another-account-list li:hover
+{
+    background-color: whitesmoke;
+    cursor: pointer;
+}
+#close-btn
+{
+        position: absolute;
+        right: 10px;
+        top: 5px;
+        font-size: 36px;
+}
+.body-change
+{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    opacity: 0.5;
+    background-color: antiquewhite;
+    display: none;
+}
+
 @media (max-width: 1187px) {
     h3 {
         font-size: 20pt;
